--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body{
     color: azure;
 }
 .Header-container{
-    margin: 10px auto;  
+    margin: 10px auto 40px auto;  
     width: 100%;
     height: 60px;
 }
@@ -32,7 +32,7 @@ body{
     justify-content:center;
     flex-direction: column;
     margin: 0 auto;
-    width: 50%;
+    width: 100%;
     height: auto;
 }
 .main-conteiner--title{
@@ -55,7 +55,7 @@ body{
     justify-content: space-evenly;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 75px;
+    margin-bottom: 20px;
 }
 .main-container--game .game-option{
     position: relative;
@@ -75,37 +75,37 @@ body{
 }
 .main-container--game .game-option .rock{
     position:absolute;
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     background-image: url("../Multimedia/rock.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    top:10px;
-    left:14px;
+    top:18px;
+    left:20px;
 }
 
 .main-container--game .game-option .paper{
     position:absolute;
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     background-image: url("../Multimedia/paper.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    top:10px;
-    left:14px;
+    top:18px;
+    left:20px;
 }
 .main-container--game .game-option .scissors{
     position:absolute;
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     background-image: url("../Multimedia/scissors.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    top:10px;
-    left:14px;
+    top:18px;
+    left:20px;
 }
 .main-container--score div h2{
     font-size: 3rem;
